--- a/jips/src/main/webapp/WEB-INF/resources-cleangold/css/custom.css
+++ b/jips/src/main/webapp/WEB-INF/resources-cleangold/css/custom.css
@@ -214,6 +214,16 @@ strong.big {
     vertical-align: middle;
 }
 
+.align_left{
+    text-align: left;
+    padding-left : 5px;
+}
+
+.align_right{
+    text-align: right;
+    padding-right : 5px;
+}
+
 .main_socre_left{
     padding-left:32px;
     text-align:right;
